     * Reintroduced the alignment, race and side being shown in the sidebar.
     * Adjusted the theme to the size and shape of the new minimap frame images.
     * Certain changes to the used text colors, sizes and alignment.
   * Non-team labels no longer remove team labels that were present in the
     same hex.
   * New colors for the Light Red and Dark Red minimap markers.
 * Miscellaneous and bug fixes:
   * Units can no longer be moved in linger mode (bug #21450).
   * Changed: Updated valgrind suppression file.
   * Labels are now removed when shroud/fog is removed, rather than waiting
     for a new turn (bug #21434).
   * Percent signs show when describing traits that increase damage or attacks
     by a percentage (bug #21577).

Version 1.11.10:
 * Add-ons client:
   * Fixed faulty add-on _info.cfg files causing the game to display obscure
     error messages or crash to desktop.
   * Generated _info.cfg files now contain the list of dependencies for an
     add-on as well (needed by wesnoth_addon_manager).
   * Python wesnoth_addon_manager client:
     * The dependencies= attribute and the [feedback] tag in .pbl files are
       now properly supported (bug #21189).
     * Generated _info.cfg files now contain the same information as the
       game's built-in client (type and title were missing).
 * AI:
   * Hang Out Micro AI: default AI [avoid] aspect is now taken into account
   * Fixed problems with several Micro AIs that sometimes produced OOS errors
 * Campaigns:
   * Eastern Invasion:
     * New world map.
     * Rewrote scenario 'Training the Ogres' and renamed it to
       'Capturing the Ogres'.
     * Rewrote scenario 'Captured'.
   * Heir to the Throne:
     * Fixed Delfador clobbering whichever unit happens to be standing on
       31,11 at the end of The Bay of Pearls, causing it to disappear
       forever.
     * S15 (The Lost General): fix bug of sighted events firing too early
   * Legend of Wesmere: