@@ -258,6 +258,7 @@ Xu, Xu, Qxu, Qxu, Ql, Ql, Ql, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Xu, Gg, Gg, Gg, Gg, Gg
             generate_name=yes
             hitpoints=4
             vision=15
+            ellipse=none
             [status]
                 petrified=yes
             [/status]
