@@ -18,6 +18,7 @@ Version 1.11.10+dev:
    * Non-team labels no longer remove team labels that were present in the
      same hex.
    * New colors for the Light Red and Dark Red minimap markers.
+   * Bug #21724: 'none' is now a special case for [unit_type] ellipse
  * Miscellaneous and bug fixes:
    * Units can no longer be moved in linger mode (bug #21450).
    * Changed: Updated valgrind suppression file.
